# jettisoned-joysticks

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md
CMake/Modules/: FindSDL2.cmake
doc/: DEVDOC.md
src/: CMakeLists.txt  clMain.cpp  gameState.cpp  gameState.hpp  resource_path.hpp  test.cpp  userState.hpp
